issue-9: Add Ant modular project to IntelliJ